fixed footer alignment

--- a/app/assets/stylesheets/components/_banners.scss
+++ b/app/assets/stylesheets/components/_banners.scss
@@ -1,12 +1,12 @@
 .home-banner {
   color: white;
   text-align: center;
-  height: 89vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: calc(100vh - var(--navbarheight) - var(--footerheight) - 2px);
   h1 {
     font-size: 50px;
     font-weight: bold;
